src/objects/Competitor_s_Information__c.object
<CustomObject>
    <description>This object is a central hub to track all they key information about your competitors</description>
    <fields>
        <fullName>Blocks_to_progress__c</fullName>
        <label>Blocks to progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Vulnerabilities__c</fullName>
        <label>Competitive Vulnerabilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors Information</relationshipLabel>
        <relationshipName>Competitors_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Strengths__c</fullName>
        <label>Competitor Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Weaknesses__c</fullName>
        <label>Competitor Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tracker__c</fullName>
        <label>Tracker</label>
        <referenceTo>Tracker__c</referenceTo>
        <relationshipLabel>Competitors Information</relationshipLabel>
        <relationshipName>Competitors_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Competitor Information</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Competitor Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>